# verifivote

./: Cargo.toml  README.md
src/: ballot.rs  block.rs  blockchain.rs  crypto.rs  lib.rs  main.rs  vote.rs  wallet.rs
